<resources>
    <string name="app_name">Twitelum</string>
    <string name="usuario">Usuário</string>
    <string name="usuario_dica">hannaMontana</string>
    <string name="senha">Senha</string>
    <string name="senha_dica">*******</string>
    <string name="entrar">Entrar</string>
    <string name="o_que_voc_est_pensando_hoje">O que você está pensando hoje?</string>
    <string name="salvar">Salvar</string>
</resources>
